Update ReportControllerTest.java